@@ -64,6 +64,9 @@
          <adapter
                type="org.eclipse.ui.views.properties.IPropertySource">
          </adapter>
+         <adapter type="org.eclipse.ui.progress.IDeferredWorkbenchAdapter"/>
+         <adapter type="org.eclipse.ui.IActionFilter"/>
+         <adapter type="org.eclipse.core.resources.IWorkspaceRoot"/>
       </factory>
    </extension>
 
